public enum ElementType { // Contains the element types for the game
    EARTH,
    WATER,
    FIRE
}
